fixed margin/padding on mobile bio page

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -85,6 +85,7 @@
   height: 2.5rem;
   border-radius: 0.25rem;
   font-family: "avenir-reg";
+  border-style: unset;
   &:hover {
     background-color: $darkblack;
   }
